@@ -6,5 +6,8 @@ the addon because I'm too lazy not to include it.
 	* Make split smart enough to notice if it might run out of
 	  slots.
 	* Add convenience stuff like "count empty slots"
-	* Improve slotspec/charspec to allow wildcarding
+
+Filter editor support is very primitive.  I want to add things like pop-ups
+for matches, and a better way to handle require/exclude tags, but I
+haven't gotten that far yet.
 
